[tool.poetry]
name = "python-compiler-api"
version = "0.1.0"
description = ""
authors = ["Deverty <bychenkov.a.k@edu.mirea.ru>"]
readme = "README.md"
packages = [{include = "python_compiler_api"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
gunicorn = "^20.1.0"
requests = "^2.28.1"
flask-cors = "^3.0.10"
pika = "^1.3.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
